--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "start": "node server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -21,9 +21,10 @@
     "request": "^2.79.0",
     "superagent": "^3.3.1",
     "superagent-charset": "^1.1.1",
+    "express": "4.12.3",
     "util": "^0.10.3"
   },
     "engines": {
-    "node": "4.x"
+    "node": "6.x"
   }
 }
